add page object pattern

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id("io.qameta.allure") version "2.12.0"
+
 }
 
 repositories {
@@ -7,17 +9,13 @@ repositories {
 }
 
 dependencies {
-    // Selenium WebDriver
     implementation 'org.seleniumhq.selenium:selenium-java:4.16.1'
-
-    // JUnit 5 (Jupiter)
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
-
-    // WebDriver Manager (for automatic driver management)
     implementation 'io.github.bonigarcia:webdrivermanager:5.6.2'
+    testImplementation("io.qameta.allure:allure-junit5:2.29.0")
 }
 
 test {
     useJUnitPlatform()
-    maxParallelForks = 9
+    maxParallelForks = 3
 }
